--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <p class="cta-text" data-translate-key="cta_text">Junte-se a artistas em todo o mundo que estão trazendo profundidade emocional à sua arte digital</p>
             <!-- 20250528 -->
             <!--  <a href="/mintbb" class="btn btn-primary" data-translate-key="cta_button">Começar a Criar Agora</a> -->
-            <a href="https://nft-bnb-20250527.vercel.app/" class="btn btn-primary" data-translate-key="cta_button">Visualizar NFT</a>
+            <a href="ver_nft.html" class="btn btn-primary" data-translate-key="cta_button">Visualizar NFT</a>
         </div>
     </div>
 
