--- a/ver_nft.html
+++ b/ver_nft.html
@@ -391,7 +391,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://nft-bnb-mintar.onrender.com/" data-translate-key="nav_home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html" data-translate-key="nav_home">Home</a>
                     </li>
    
          
