--- a/ver_nft.html
+++ b/ver_nft.html
@@ -86,6 +86,7 @@
             width: 100%;
             padding-top: 100%; /* 1:1 Aspect Ratio */
             overflow: hidden;
+            background-color: var(--medium-blue);
         }
         .nft-image {
             position: absolute;
