--- a/ver_nft.html
+++ b/ver_nft.html
@@ -511,7 +511,7 @@
                 <p class="text-muted">Conecte sua carteira e busque seus NFTs na BNB Smart Chain Testnet</p>
             </div>
             
-            <div id="nfts-grid" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div id="nfts-grid" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 feature-card">
                 <!-- NFTs serão inseridos aqui dinamicamente -->
             </div>
         </div>
