--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6" style="display: none;">
+                <div class="col-md-6" >
                     <div class="benefit-item">
                         <div class="benefit-icon icon-opensource">
                             <i class="fas fa-code-branch"></i>
